pricing text + landing alignment issue fixed

--- a/css/style.css
+++ b/css/style.css
@@ -1534,6 +1534,12 @@
   .pt-0 {
     padding-top: calc(var(--spacing) * 0);
   }
+  .pt-1 {
+    padding-top: calc(var(--spacing) * 1);
+  }
+  .pt-2 {
+    padding-top: calc(var(--spacing) * 2);
+  }
   .pt-3 {
     padding-top: calc(var(--spacing) * 3);
   }
@@ -2439,10 +2445,30 @@
       padding-inline: calc(var(--spacing) * 4);
     }
   }
+  .sm\:px-\[2svh\] {
+    @media (width >= 40rem) {
+      padding-inline: 2svh;
+    }
+  }
+  .sm\:py-\[2svh\] {
+    @media (width >= 40rem) {
+      padding-block: 2svh;
+    }
+  }
   .sm\:text-xl {
     @media (width >= 40rem) {
       font-size: var(--text-xl);
       line-height: var(--tw-leading, var(--text-xl--line-height));
+    }
+  }
+  .sm\:text-\[2\.1svh\] {
+    @media (width >= 40rem) {
+      font-size: 2.1svh;
+    }
+  }
+  .sm\:text-\[3\.5svh\] {
+    @media (width >= 40rem) {
+      font-size: 3.5svh;
     }
   }
   .md\:mx-5 {
@@ -2767,51 +2793,6 @@
       width: 8%;
     }
   }
-  .md\:w-\[23svw\] {
-    @media (width >= 48rem) {
-      width: 23svw;
-    }
-  }
-  .md\:w-\[30\%\] {
-    @media (width >= 48rem) {
-      width: 30%;
-    }
-  }
-  .md\:w-\[40\%\] {
-    @media (width >= 48rem) {
-      width: 40%;
-    }
-  }
-  .md\:w-\[45\%\] {
-    @media (width >= 48rem) {
-      width: 45%;
-    }
-  }
-  .md\:w-\[50svh\] {
-    @media (width >= 48rem) {
-      width: 50svh;
-    }
-  }
-  .md\:w-\[55svh\] {
-    @media (width >= 48rem) {
-      width: 55svh;
-    }
-  }
-  .md\:w-\[70\%\] {
-    @media (width >= 48rem) {
-      width: 70%;
-    }
-  }
-  .md\:w-\[75\%\] {
-    @media (width >= 48rem) {
-      width: 75%;
-    }
-  }
-  .md\:w-\[92\%\] {
-    @media (width >= 48rem) {
-      width: 92%;
-    }
-  }
   .md\:w-\[100\%\] {
     @media (width >= 48rem) {
       width: 100%;
@@ -2837,9 +2818,19 @@
       width: 23.7%;
     }
   }
+  .md\:w-\[23svw\] {
+    @media (width >= 48rem) {
+      width: 23svw;
+    }
+  }
   .md\:w-\[27\.6rem\] {
     @media (width >= 48rem) {
       width: 27.6rem;
+    }
+  }
+  .md\:w-\[30\%\] {
+    @media (width >= 48rem) {
+      width: 30%;
     }
   }
   .md\:w-\[35\%\] {
@@ -2847,9 +2838,19 @@
       width: 35%;
     }
   }
+  .md\:w-\[40\%\] {
+    @media (width >= 48rem) {
+      width: 40%;
+    }
+  }
   .md\:w-\[40svh\] {
     @media (width >= 48rem) {
       width: 40svh;
+    }
+  }
+  .md\:w-\[45\%\] {
+    @media (width >= 48rem) {
+      width: 45%;
     }
   }
   .md\:w-\[50\%\] {
@@ -2857,9 +2858,19 @@
       width: 50%;
     }
   }
+  .md\:w-\[50svh\] {
+    @media (width >= 48rem) {
+      width: 50svh;
+    }
+  }
   .md\:w-\[55\%\] {
     @media (width >= 48rem) {
       width: 55%;
+    }
+  }
+  .md\:w-\[55svh\] {
+    @media (width >= 48rem) {
+      width: 55svh;
     }
   }
   .md\:w-\[60\%\] {
@@ -2867,9 +2878,19 @@
       width: 60%;
     }
   }
+  .md\:w-\[70\%\] {
+    @media (width >= 48rem) {
+      width: 70%;
+    }
+  }
   .md\:w-\[73\%\] {
     @media (width >= 48rem) {
       width: 73%;
+    }
+  }
+  .md\:w-\[75\%\] {
+    @media (width >= 48rem) {
+      width: 75%;
     }
   }
   .md\:w-\[80\%\] {
@@ -2880,6 +2901,11 @@
   .md\:w-\[90\%\] {
     @media (width >= 48rem) {
       width: 90%;
+    }
+  }
+  .md\:w-\[92\%\] {
+    @media (width >= 48rem) {
+      width: 92%;
     }
   }
   .md\:w-full {
@@ -4255,6 +4281,63 @@
       }
     }
   }
+  .landscape\:sm\:my-auto {
+    @media (orientation: landscape) {
+      @media (width >= 40rem) {
+        margin-block: auto;
+      }
+    }
+  }
+  .sm\:landscape\:mb-\[3svh\] {
+    @media (width >= 40rem) {
+      @media (orientation: landscape) {
+        margin-bottom: 3svh;
+      }
+    }
+  }
+  .landscape\:sm\:h-\[70svh\] {
+    @media (orientation: landscape) {
+      @media (width >= 40rem) {
+        height: 70svh;
+      }
+    }
+  }
+  .landscape\:sm\:w-\[53\%\] {
+    @media (orientation: landscape) {
+      @media (width >= 40rem) {
+        width: 53%;
+      }
+    }
+  }
+  .landscape\:sm\:flex-row {
+    @media (orientation: landscape) {
+      @media (width >= 40rem) {
+        flex-direction: row;
+      }
+    }
+  }
+  .landscape\:sm\:pr-\[10svh\] {
+    @media (orientation: landscape) {
+      @media (width >= 40rem) {
+        padding-right: 10svh;
+      }
+    }
+  }
+  .landscape\:sm\:pl-\[13svh\] {
+    @media (orientation: landscape) {
+      @media (width >= 40rem) {
+        padding-left: 13svh;
+      }
+    }
+  }
+  .landscape\:sm\:leading-\[3\.5svh\] {
+    @media (orientation: landscape) {
+      @media (width >= 40rem) {
+        --tw-leading: 3.5svh;
+        line-height: 3.5svh;
+      }
+    }
+  }
   .landscape\:md\:inset-x-full {
     @media (orientation: landscape) {
       @media (width >= 48rem) {
@@ -4297,13 +4380,6 @@
       }
     }
   }
-  .landscape\:md\:mt-\[4svh\] {
-    @media (orientation: landscape) {
-      @media (width >= 48rem) {
-        margin-top: 4svh;
-      }
-    }
-  }
   .landscape\:md\:mt-\[10svh\] {
     @media (orientation: landscape) {
       @media (width >= 48rem) {
@@ -4315,6 +4391,13 @@
     @media (orientation: landscape) {
       @media (width >= 48rem) {
         margin-top: 1svh;
+      }
+    }
+  }
+  .landscape\:md\:mt-\[4svh\] {
+    @media (orientation: landscape) {
+      @media (width >= 48rem) {
+        margin-top: 4svh;
       }
     }
   }
